Fix `z-index` conflicts between normal elements, context menu, and dialog (#168)
* fix?

* better comment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,8 @@
 .app {
   display: flex;
   flex-direction: column;
+  /* All elements are at z-index 0; unless overwritten */
+  z-index: 0;
 }
 
 .main-section {
